fixed the overflow error

--- a/client/src/components/messageheader.css
+++ b/client/src/components/messageheader.css
@@ -5,7 +5,7 @@
     align-items: center;
     position: fixed;
   /* width: 480px; */
- width: 65%;
+ width: 80%;
     background-color: #242526;
     /* top: 70px !important;
     right:100px !important; */
