--- a/client/src/pages/messenger.css
+++ b/client/src/pages/messenger.css
@@ -14,12 +14,12 @@
     height: 56px !important;
 }
 .chatMenu{
-    flex:3;
+    flex:2;
     border-right: 1px solid gray;
     overflow-y: hidden;
 }
 .chatBox{
-    flex:7;
+    flex:8;
     /* height: 100vh; */
     overflow-y:scroll;
 }
